--- a/index.html
+++ b/index.html
@@ -372,7 +372,7 @@
 
   </div>
 
-  <script type="module" src="./main.js"></script>
+  <script type="module" src="main.js"></script>
 </body>
 
 </html>
