created the video display screen and the the four column below it

--- a/details.html
+++ b/details.html
@@ -10,8 +10,24 @@
 <body>
 
     <div id="general">
-
-
+        <video id="myVideo" src="path-to-video.mp4" controls autoplay loop muted></video>
+        <div class="four-column"> 
+            <div class="four-column"> 
+                <div class="column"> 
+                    <h6>PREP TIME</h6> 
+                    <h6>15 MINS</h6> 
+                </div> 
+                <div class="column"> 
+                    <h6>PREP TIME</h6> 
+                    <h6>45 MINS</h6> 
+                </div> <div class="column"> 
+                    <h6>Servings</h6> 
+                    <h6>4 PEOPLE<i class="fa fa-pencil-square"></i></h6> 
+                </div> <div class="column"> 
+                    <h6><i class="fa fa-star"></i></h6> 
+                </div> 
+            </div> 
+        </div>
 
 
         <div id="overall-column">
