adjusted and remove the additional padding the was causing the page to float

--- a/details.html
+++ b/details.html
@@ -178,7 +178,8 @@
                         <p>Enjoy weekly hand picked recipes and recommendations</p>
                         </div>
                         <form action="#" method="post">
-                        <input type="email" name="email" placeholder="Email Address" style="width: 280px;">
+                        <!-- <input type="email" name="email" placeholder="Email Address" style="width: 280px;"> -->
+                        <input type="email" name="email" placeholder="Email Address" >
                         <button type="submit" style="width: 120px;">JOIN</button>
                         </form>
                         <p>By joining our newsletter you agree to our Terms and Conditions</p>
